--- a/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
@@ -648,6 +648,10 @@ _expediente_report_quintos_mep:
     pattern:  /reports/mep/quintos
     defaults: { _controller: TecnotekExpedienteBundle:Report:quintosMep }
 
+_expediente_report_convo:
+    pattern:  /reports/convo
+    defaults: { _controller: TecnotekExpedienteBundle:Report:convo }
+
 _expediente_report_absences_by_route:
    pattern:  /reports/absencesByRoute/
    defaults: { _controller: TecnotekExpedienteBundle:Report:reportStudentAbsencesByRoute }
@@ -925,6 +929,10 @@ _expediente_sysadmin_load_groups_of_year:
 _expediente_sysadmin_load_courses_of_group:
   pattern: /qualifications/loadCoursesOfGroup/
   defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:loadCoursesOfGroup }
+
+_expediente_sysadmin_load_courses_of_period_and_level:
+  pattern: /loadCoursesOfPeriodAndLevel/
+  defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:loadCoursesOfPeriodAndLevel }
 
 _expediente_sysadmin_load_courses_of_group_by_teacher:
   pattern: /qualifications/loadCourseOfGroupByTeacher/
