--- a/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
@@ -1137,6 +1137,10 @@ _expediente_teacher_load_group_excel:
   pattern:  /t/loadGroupExcel
   defaults: { _controller: TecnotekExpedienteBundle:ExcelFileGenerator:loadGroupExcel }
 
+_expediente_teacher_generate_club_excel:
+  pattern:  /t/generateClubExcel
+  defaults: { _controller: TecnotekExpedienteBundle:ExcelFileGenerator:generateClubExcel }
+
 _expediente_teacher_load_group_observations:
   pattern:  /t/loadGroupObservations
   defaults: { _controller: TecnotekExpedienteBundle:Teacher:loadGroupObservations }
