--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -56,6 +56,7 @@ security:
 
     access_control:
         - { path: /expediente/secured/login.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /expediente/api.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/expediente.*, role: IS_AUTHENTICATED_FULLY  }
         
         #- { path: ^/expediente/sysadmin.*, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
